# ligeia

./: .gitignore  .taurignore  ADD_KEYWORDS.md  AGENTS.md  ARCHITECTURE.md  AUTOTAG.md  BATCH_GEMINI_PLAN.md  CLAUDE.md  CONFIDENCE_SCORING.md  DRAG_DROP.md  FE_PLAN_FOR_ATMOSPHERES.md  GEMINI_PLAN.md  PLAN.md  README.md  STORE_TAGS.md  TAGS.md  TAG_FOLDER_APPROACH.md  TAILWIND.md  TEMPLATE-SYSTEM.md  TESTING.md  VIRTUAL_FOLDERS.md  VOCABULARY_INTEGRATION_REPORT.md  add-extra-tags.js  analyze_unmapped_tags.py  build-frontend.js  check.txt  fileToTransfor.json  find-missing-tags.js  find-unmapped-tags.js  folder_structure.md  index-template.html  index.html  invalid_folder_paths.md  ligeia-library-2025-08-19.json  main-refactored.js  main-template.js  main.js  missing-tags-report.json  mp3_tagger.js  new_tags_to_add.md  (+9 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/debug/: gemini_response_batch_0.txt  gemini_response_batch_1.txt  gemini_response_batch_2.txt
src-tauri/resources/: AUTOTAG.md  TAGS.md  folder_structure.md
src-tauri/src/: atmosphere_handler.rs  audio_file_handler.rs  audio_handler.rs  audio_processing_handler.rs  database.rs  file_scanner.rs  gemini_handler.rs  gemini_tagger.rs  import_export_handler.rs  logger.rs  main.rs  models.rs  remove_tags_handler.rs  store_tags_handler.rs  tag_handler.rs  tag_manager.rs  virtual_folder_handler.rs
src-tauri/src/data/: folder_structure.rs  folder_tag_mappings.rs  genre_vocabulary.rs  keyword_vocabulary.rs  mod.rs  mood_vocabulary.rs  occasion_vocabulary.rs
src-tauri/src/data/tag_mappings/: folder_tag_activities.rs  folder_tag_audio_structure.rs  folder_tag_combat.rs  (+24 more)
src-tauri/src/database/: atmospheres.rs  audio_files.rs  mod.rs  pool.rs  rpg_tags.rs  schema.rs  search.rs  tag_mapping.rs  virtual_folders.rs  vocabulary.rs
(+155 files in other folders)
