[package]
name = "ligeia"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.3", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = ["wry"] }
tauri-plugin-dialog = "2.3"
tauri-plugin-fs = "2.4" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.33", features = ["bundled"] }
id3 = "1.13"
scan_dir = "0.3"
