[package]
name = "ligeia"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.8", features = ["wry"] }
tauri-plugin-dialog = "2.3"
tauri-plugin-fs = "2.4"
tauri-plugin-log = { version = "2.6", features = ["colored"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
id3 = "1.13"
scan_dir = "0.3"
symphonia = { version = "0.5", features = ["all"] }
aubio-rs = { version = "0.2", features = ["bindgen"] }
chrono = { version = "0.4", features = ["serde"] }
gemini-client-api = "5.5.8"
dotenv = "0.15.0"
anyhow = "1.0.99"
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
regex = "1.10"
